EI-309 - Add ability to delete tests on test view page